--- a/TestApplicationIos/Storyboards/Base.lproj/RootVC.storyboard
+++ b/TestApplicationIos/Storyboards/Base.lproj/RootVC.storyboard
@@ -35,7 +35,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bBB-cR-I8w">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="144" width="414" height="718"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="7us-At-2c9"/>
@@ -91,17 +91,27 @@
                                     <constraint firstItem="t2v-fM-n2h" firstAttribute="top" secondItem="W3d-4K-M4Q" secondAttribute="bottom" id="ptX-ap-FTz"/>
                                 </constraints>
                             </view>
+                            <searchBar contentMode="redraw" placeholder="Search you video" translatesAutoresizingMaskIntoConstraints="NO" id="ucF-X0-xeY">
+                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Aun-Vg-KaJ"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="ucF-X0-xeY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4uK-Su-3Ky"/>
                             <constraint firstItem="bBB-cR-I8w" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AJH-Xm-elr"/>
+                            <constraint firstItem="ucF-X0-xeY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="D2a-tW-c7r"/>
+                            <constraint firstItem="ucF-X0-xeY" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="KPp-Y4-g5b"/>
                             <constraint firstItem="16L-Pj-Ygc" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="L1u-qz-6eY"/>
-                            <constraint firstItem="bBB-cR-I8w" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="T6B-p8-9ec"/>
                             <constraint firstItem="16L-Pj-Ygc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VQy-NY-oAH"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bBB-cR-I8w" secondAttribute="trailing" id="WyU-q1-VyW"/>
                             <constraint firstItem="bBB-cR-I8w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dAR-KO-Sxx"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bBB-cR-I8w" secondAttribute="bottom" id="gXb-yQ-xya"/>
+                            <constraint firstItem="bBB-cR-I8w" firstAttribute="top" secondItem="ucF-X0-xeY" secondAttribute="bottom" id="kFK-mL-83g"/>
                             <constraint firstItem="bBB-cR-I8w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mS1-aw-6jT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bBB-cR-I8w" secondAttribute="bottom" id="tdb-yA-WD5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="16L-Pj-Ygc" secondAttribute="bottom" id="tm1-bP-T2z"/>
@@ -111,7 +121,7 @@
                     <navigationItem key="navigationItem" id="N1k-rV-Wfc">
                         <barButtonItem key="rightBarButtonItem" id="Xls-yB-fJA">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nae-aA-fmU">
-                                <rect key="frame" x="255" y="6" width="139" height="32"/>
+                                <rect key="frame" x="244" y="6" width="150" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <state key="normal" title="Choose the country">
@@ -126,12 +136,13 @@
                     <connections>
                         <outlet property="countryPicker" destination="t2v-fM-n2h" id="iOQ-2c-zGY"/>
                         <outlet property="countryPickerView" destination="16L-Pj-Ygc" id="onK-m6-2cl"/>
+                        <outlet property="searchBar" destination="ucF-X0-xeY" id="kM4-ck-ICv"/>
                         <outlet property="tableView" destination="bBB-cR-I8w" id="x4z-2v-bc6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-509" y="-1"/>
+            <point key="canvasLocation" x="-510.14492753623193" y="-1.3392857142857142"/>
         </scene>
     </scenes>
 </document>
