--- a/TestApplicationIos/Storyboards/RootVC/Base.lproj/RootVC.storyboard
+++ b/TestApplicationIos/Storyboards/RootVC/Base.lproj/RootVC.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="32B-3d-l89">
     <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,28 +10,52 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="ZMP-lM-QJa">
+            <objects>
+                <navigationController id="32B-3d-l89" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4Wz-Z3-taI">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="s5G-r1-OSQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nkx-DY-uzL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2367" y="-44"/>
+        </scene>
         <!--RootVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="RootViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="RootVC" customModule="TestApplicationIos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <searchBar contentMode="redraw" placeholder="Search you video" translatesAutoresizingMaskIntoConstraints="NO" id="ucF-X0-xeY">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                <color key="barTintColor" red="0.36862745098039218" green="0.36862745098039218" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Aun-Vg-KaJ"/>
+                                </connections>
+                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bBB-cR-I8w">
-                                <rect key="frame" x="0.0" y="100" width="414" height="762"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="56" width="414" height="718"/>
+                                <color key="backgroundColor" red="0.36862745098039218" green="0.36862745098039218" blue="0.36862745098039218" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="7us-At-2c9"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="4ws-Qo-mtJ"/>
                                 </connections>
                             </tableView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="16L-Pj-Ygc">
-                                <rect key="frame" x="0.0" y="602" width="414" height="260"/>
+                                <rect key="frame" x="0.0" y="514" width="414" height="260"/>
                                 <subviews>
-                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W3d-4K-M4Q">
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W3d-4K-M4Q">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                        <color key="backgroundColor" red="0.36862745098039218" green="0.36862745098039218" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <items>
                                             <barButtonItem style="plain" id="fj9-O7-V8K">
                                                 <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="iX6-rx-soH">
@@ -59,9 +83,11 @@
                                                 </button>
                                             </barButtonItem>
                                         </items>
+                                        <color key="barTintColor" red="0.36862745098039218" green="0.36862745098039218" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </toolbar>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t2v-fM-n2h" customClass="CountryPicker" customModule="CountryPicker">
                                         <rect key="frame" x="0.0" y="44" width="414" height="216"/>
+                                        <color key="backgroundColor" red="0.36862745098039218" green="0.36862745098039218" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </pickerView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -75,15 +101,8 @@
                                     <constraint firstItem="t2v-fM-n2h" firstAttribute="top" secondItem="W3d-4K-M4Q" secondAttribute="bottom" id="ptX-ap-FTz"/>
                                 </constraints>
                             </view>
-                            <searchBar contentMode="redraw" placeholder="Search you video" translatesAutoresizingMaskIntoConstraints="NO" id="ucF-X0-xeY">
-                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Aun-Vg-KaJ"/>
-                                </connections>
-                            </searchBar>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.36862745098039218" green="0.36862745098039218" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="ucF-X0-xeY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4uK-Su-3Ky"/>
@@ -117,20 +136,21 @@
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="countryPicker" destination="t2v-fM-n2h" id="iOQ-2c-zGY"/>
                         <outlet property="countryPickerView" destination="16L-Pj-Ygc" id="onK-m6-2cl"/>
-                        <outlet property="downloadVideoListManager" destination="MC5-Ln-4xb" id="mCL-4G-sbc"/>
-                        <outlet property="infoVideoObject" destination="a8S-uo-9uo" id="puQ-L2-CcH"/>
+                        <outlet property="downloadVideoListContainer" destination="MC5-Ln-4xb" id="SyK-8s-TiN"/>
                         <outlet property="searchBar" destination="ucF-X0-xeY" id="kM4-ck-ICv"/>
                         <outlet property="tableView" destination="bBB-cR-I8w" id="x4z-2v-bc6"/>
+                        <outlet property="videoInfoContainer" destination="a8S-uo-9uo" id="JmK-X0-iBW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <customObject id="MC5-Ln-4xb" customClass="DownloadVideoListManager" customModule="TestApplicationIos" customModuleProvider="target"/>
-                <customObject id="a8S-uo-9uo" customClass="InfoVideoObject" customModule="TestApplicationIos" customModuleProvider="target"/>
+                <customObject id="MC5-Ln-4xb" customClass="VideoListContainer" customModule="TestApplicationIos" customModuleProvider="target"/>
+                <customObject id="a8S-uo-9uo" customClass="VideoInfoContainer" customModule="TestApplicationIos" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="-786" y="-6"/>
+            <point key="canvasLocation" x="-1435" y="-44"/>
         </scene>
     </scenes>
 </document>
